      preserved.
    + [NT] Runtime for collections and checks now only requires
      a single --debug option.  Lintian will now also show
      runtime for other things (e.g. total runtimes).
    + [NT] Add --perf-debug and --perf-output options to enable
      logging for performance data.  This is mostly intended
      to allow collecting performance data from archive-wide
      runs.

  * lib/Lintian/Relation.pm:
    + [NT] Unparsable entries are now included in relation
      objects rather than being silently discarded.
  * lib/Lintian/Util.pm:
    + [NT] Purge even more ENV variables in clean_env.
    + [NT] Add "pipe_tee" subroutine for tee'ing data from one
      input file descriptors to one or more output output file
      descriptors.

  * man/lintian.pod.in:
    + [NT] Document the performance logging options.

  * private/generate-html-docs:
    + [NT] Add doctype and encoding to generated files.

  * reporting/harness:
    + [NT] Add missing import.
  * reporting/html_reprots:
    + [NT] Correct the command line in the creation of the
      lintian.log.gz.
  * reporting/{html_reports,templates/*}:
    + [NT] Correct the generated HTML, which was invalid in
      some cases.
  * reporting/templates/{head,lintian.css}.tmpl:
    + [NT] Define a default "viewport".  This slightly improves
      the output on some mobile devices.
    + [NT] Add some special cases for "smaller" viewports in the
      style sheet.
  * reporting/templates/maintainer.tmpl:
    + [NT] Correct name of variable to avoid using an undefined
      variable.

 -- Niels Thykier <niels@thykier.net>  Thu, 02 Oct 2014 22:22:31 +0200

lintian (2.5.28) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - license-problem-cc-by-nc-sa

  * checks/*:
    + [NT] Remove all uses of "control", "debfiles" and
      "unpacked".
  * checks/*:
    + [NT] Remove all uses of the "doc-base-files", "init.d"
      and "menu-files" collections.
  * checks/changes-file.pm: